--- a/resources/backend/sass/app.scss
+++ b/resources/backend/sass/app.scss
@@ -4,6 +4,10 @@
 @import "../../../node_modules/highlight.js/styles/solarized-dark.css";
 @import "../../vendor/sass/base.scss";
 
+html, body {
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+}
+
 * {
   box-sizing: border-box;
 }
